# work-log

./: .gitignore  .tool-versions  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/clients/: confluence.py  github.py  greenhouse.py  jira.py  summarizer.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ArtifactList.tsx  ConfluenceCard.tsx  DateRangePicker.tsx  InterviewCard.tsx  JiraCard.tsx  NavBar.tsx  PRCard.tsx  PillButton.tsx  WeekPicker.tsx
frontend/src/pages/: ConfluenceDocsPage.tsx  ConfluenceMonthPage.tsx  ConfluenceWeekPage.tsx  DashboardPage.tsx  DateRangeView.tsx  GreenhouseMonthPage.tsx  GreenhousePage.tsx  GreenhouseWeekPage.tsx  JiraMonthPage.tsx  JiraTicketsPage.tsx  JiraWeekPage.tsx  LandingPage.tsx  MonthViewPage.tsx  PullRequestsMonthPage.tsx  PullRequestsPage.tsx  PullRequestsWeekPage.tsx  WeekViewPage.tsx
